--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
                             <p> Lorem ipsum dolor sit amet, consectetur ?</p>
                         </div>
 
-                        <div class="contend none">
+                        <div class="contend ">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis egestas ex, a elementum est. Mauris auctor nunc quis erat.
                         </div>
                         <hr>
                     </li>
 
                     <li class="pergunta">
-                       
                             <div class="texto-e-seta">
                                 <p> Lorem ipsum dolor sit amet, consectetur ?</p>
                             </div>
                       
-                        <div class="contend none">
+                        <div class="contend ">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis egestas ex, a elementum est. Mauris auctor nunc quis erat.
                         </div>
                         <hr>
